--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>aula06</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>aula06</name>
-	<description>Projeto Aula</description>
+	<description>Projeto Aula POO</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
